<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appvirality_wom_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/appvirality_terms_title"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#A5A5A5"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/appvirality_prev"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingRight="3dp"
            android:src="@drawable/appvirality_prev" />

        <TextView
            android:id="@+id/appvirality_growth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/appvirality_user_settings_terms"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/appvirality_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp" />

            <WebView
                android:id="@+id/appvirality_wom_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >
            </WebView>
            
            <TextView
                android:id="@+id/appvirality_no_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/appvirality_no_network_message"
                android:textColor="#000000"
                android:visibility="gone" />

            <Button
                android:id="@+id/appvirality_settings_reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="#2F68AD"
                android:padding="8dp"
                android:text="@string/appvirality_btnreload"
                android:textColor="#ffffff"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>